Fix bug where not found message was covering up the app navigation
Closes #296

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -3480,6 +3480,9 @@ textarea.xlarge{
 .Editor .dropdown-menu li a i {
     vertical-align: middle;
 }
+#editor-body .alert {
+    position: relative;
+}
 .Editor #Content > .alert-container{
 	position: fixed;
     left: 0px;
